--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^3.0.0",
     "bulma": "^0.9.4",
+    "prettier": "^3.3.3",
     "sass": "^1.63.6",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
@@ -28,6 +29,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
     "fflate": "^0.8.0",
+    "js-beautify": "^1.15.1",
     "svelte-codemirror-editor": "^1.4.0",
     "thememirror": "^2.0.1"
   },
