--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
     "svgo": "^3.0.2",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "wrangler": "^4.16.1"
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
